# beakometry

./: CMakeLists.txt
include/: board.hpp  command.hpp  geometry.h  geometry.hpp  menu_bar.hpp  raylib.hpp  tool.h  toolbar.hpp  types.h
src/: main.cpp
src/app/: board.cpp  geometry.cpp  menu_bar.cpp  raylib.cpp  toolbar.cpp
src/core/: function.c  function.cpp  geometry.c  geometry.cpp  graph.cpp  internal.h  internal.hpp
src/menu/: load.cpp  save.cpp
src/tools/: angle_bisector.cpp  bisector.cpp  circle.cpp  circumcircle.cpp  delete.cpp  helper.hpp  intersection.cpp  isect.cpp  line.cpp  midpoint.cpp  move.cpp  parallel.cpp  perp.cpp  perpendicular.cpp  point.cpp  tangent.cpp
